add additional tests